--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 						                        <div class="header-text text-center">
 						                        	<img src="images/dp.jpg" alt="" class="img-circle">
 			                                        <h2>jerry</h2>
-			                                        <p>I'm Product Designer</p>
+			                                        <p>I'm Am student </p>
 			                                        <div class="social-links header-links">
 			                                            <ul>
 			                                                <li><a href=""><i class="fa fa-facebook facebook"></i></a></li>
